<resources>
    <string name="app_name">Ecommerce</string>

    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="something_went_wrong">Something Went Wrong !</string>

    <string name="shop">Shop</string>
    <string name="category">Category</string>
    <string name="new_">New</string>
    <string name="me">Me</string>

    <string-array name="filter_option">
        <item>"Price high to low"</item>
        <item>"Price low to high"</item>
        <item>"Price high to low"</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="what_new">What\'s new</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="what_on_sell">See what\'s on sale</string>
    <string name="hint_search">Search</string>

    <string name="desc_favourites">Favorites</string>
    <string name="desc_mail">Notification</string>
    <string name="desc_cart">Cart</string>
    <string name="desc_category_image">Product category image</string>
    <string name="desc_offer">Offer</string>
    <string name="desc_setting">setting</string>


    <string name="sign_in_register">SIGN IN / REGISTER</string>
    <string name="wallet">Wallet</string>
    <string name="coupons">Coupons</string>
    <string name="points">Points</string>
    <string name="gift_card">Gift Card</string>
    <string name="my_orders">My Orders</string>
    <string name="unpaid">Unpaid</string>
    <string name="processing">Processing</string>
    <string name="shipping">Shipping</string>
    <string name="returns">Returns</string>
    <string name="more_services">More Services</string>
    <string name="support">Support</string>
    <string name="share_and_earn"><![CDATA[Share & Earn]]></string>
    <string name="my_reference">My Reference</string>
    <string name="settings">Settings</string>
    <string name="no_internet_connected">No Internet connection</string>
    <string name="hint_swipe_to_refresh">Swipe down to refresh</string>
    <string name="new_arrivals">new arrivals</string>
    <string name="child_image">child image</string>
    <string name="sub_product">Sub Product</string>
    <string name="desc_see_more">See more item</string>
    <string name="see_more">See more</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="loren_ipsum_placeholder_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="review_image">review image</string>
    <string name="add_review">Add Review</string>
    <string name="did_the_item_sell_well">Did the item sell well?</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="cancel">CANCEL</string>
    <string name="customer_services">Customer Services</string>
    <string name="submit">SUBMIT</string>
    <string name="order_image">order image</string>
    <string name="faq"><u>FAQ</u></string>
    <string name="sort_option_1">Most Popular</string>
    <string name="sort_option_2">New Arrival</string>
    <string name="sort_option_3">Price Low to High</string>
    <string name="sort_option_4">Price High to Low</string>
    <string name="no_reviews_for_this_product_yet">No reviews for this product yet</string>
    <string name="view_more">View More</string>
    <string name="wish_list_image">wish list image</string>
    <string name="clear">CLEAR ALL</string>
    <string name="apply_filter">Apply Filter</string>

    <string name="rupee">\u20B9</string>
    <string name="no_items_here">No Items Here</string>
    <string name="divider">divider</string>
    <string name="recommendations_for_you">Recommendations For You</string>
    <string name="recommended_product">recommended product</string>
    <string name="no_filter_applied">No Filter Applied</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="sort_by">Sort By</string>
    <string name="size">Size</string>
    <string name="close">Close</string>
    <string name="search_here">Search Here</string>
    <string name="shopping_bag_image">shopping bag image</string>
    <string name="desc_app_logo">App logo</string>
    <string name="wishlist">WishList</string>
    <string name="change_your_existing_password">Change Your Existing Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_current_password">Enter Your Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="feedback">Feedback</string>
    <string name="select_color">Select a color</string>
    <string name="select_size">Select a size</string>
    <string name="search_product">search product</string>
    <string name="remove">Remove</string>
    <string name="click_to_refresh">Click To Refresh</string>
    <string name="hot_search">Hot Search</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="share">Share</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="return_policy">Return Policy</string>
    <string name="invalid_address">Invalid or empty address</string>
    <string name="title_place_order">Place order</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="can_not_add_more_items">Can not add more item</string>
    <string name="tap_to_refresh">Click to Refresh</string>
    <string name="remove_coupon">Remove Coupon</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="error_no_delivery">Cannot be shipped to your selected delivery location. Please choose a different delivery location.</string>
    <string name="desc_product_image">product Image</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="filter_reset">Reset filters</string>
    <string name="info">Info</string>
    <string name="user_setting">User setting</string>
    <string name="more">More</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="country_region">Country / Region</string>
    <string name="account_security">Account Security</string>
    <string name="payment_options">Payment Options</string>
    <string name="sign_out">Sign out</string>
    <string name="email_verification">Email Verification</string>
    <string name="delete_account">Delete Account</string>
    <string name="customer_service">Customer Service</string>
    <string name="service_records">Service Records</string>


</resources>