<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/sb_text_size_18">


    <TextView
        android:id="@+id/txt_feedback_title"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feedback"
        android:textSize="@dimen/sb_text_size_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_feedback_title"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_title">

        <EditText
            android:id="@+id/txt_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Send us your valuable feedback"
            android:inputType="textMultiLine"
            android:maxLines="8"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_feedback_submit"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sb_size_16"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/sb_size_0"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/input1"
        app:layout_constraintTop_toBottomOf="@id/input1" />

    <Button
        android:id="@+id/btn_feedback_cancel"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sb_size_4"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/sb_size_0"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_feedback_submit"
        app:layout_constraintEnd_toStartOf="@id/btn_feedback_submit" />


</androidx.constraintlayout.widget.ConstraintLayout>