<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/sb_size_16"
    android:paddingTop="@dimen/sb_size_24"
    android:paddingEnd="@dimen/sb_size_16"
    android:paddingBottom="@dimen/sb_size_32">

    <EditText
        android:id="@+id/edittext_review"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sb_size_80"
        android:layout_marginTop="24dp"
        android:background="@color/grey_300"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="@dimen/sb_size_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_name"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rating_bar"
        tools:ignore="Autofill,LabelFor" />

    <RatingBar
        android:id="@+id/dialog_rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="4"
        android:theme="@style/RatingBarTheme"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_coupon_date" />

    <TextView
        android:id="@+id/txt_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_font"
        android:text="David Park"
        style="@style/BoldBlackText"
        android:textColor="@color/black"
        android:textSize="@dimen/sb_text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_coupon_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_font"
        android:text="@string/customer_services"
        android:textColor="@color/black"
        android:textSize="@dimen/sb_text_size_10"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_name" />

    <TextView
        android:id="@+id/dialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sb_size_12"
        android:fontFamily="@font/gotham_font"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="@dimen/sb_text_size_10"
        app:layout_constraintEnd_toEndOf="@id/edittext_review"
        app:layout_constraintTop_toBottomOf="@+id/edittext_review" />

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sb_size_12"
        android:fontFamily="@font/gotham_font"
        android:text="@string/cancel"
        android:textColor="@color/red_800"
        android:textSize="@dimen/sb_text_size_10"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_submit"
        app:layout_constraintEnd_toStartOf="@id/dialog_submit"
        app:layout_constraintTop_toTopOf="@+id/dialog_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>