<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".activities.AccountSecurityActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/sb_size_4"
        android:theme="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/account_security"
        app:titleTextColor="@color/black" />

    <FrameLayout
        android:id="@+id/account_security_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sb_size_2"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/emailVerifyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_50"
                    android:gravity="center|start"
                    android:background="?android:selectableItemBackground"
                    android:paddingHorizontal="@dimen/sb_size_22"
                    android:text="@string/email_verification"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_1"
                    android:background="@color/grey_100" />

                <TextView
                    android:id="@+id/changePassTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_50"
                    android:gravity="center|start"
                    android:background="?android:selectableItemBackground"
                    android:paddingHorizontal="@dimen/sb_size_25"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_1"
                    android:background="@color/grey_100" />

                <TextView
                    android:id="@+id/deleteAccountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sb_size_50"
                    android:gravity="center|start"
                    android:background="?android:selectableItemBackground"
                    android:paddingHorizontal="@dimen/sb_size_25"
                    android:text="@string/delete_account"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
            </LinearLayout>

            <ViewStub
                android:id="@+id/vsEmptyScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/sb_size_4"
                android:layout="@layout/no_internet_connected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"/>

</RelativeLayout>